--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -43,7 +43,7 @@ defaultttl={{defaultttl}}
 mail={{adminMailAddr}}
 
 [arex/data-staging]
-arexmaxtransfertries={{maxtransfertries}}
+maxtransfertries={{maxtransfertries}}
 
 [arex/cache]
 cachedir={{arc_frontend_cachedir}}
