--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -120,7 +120,7 @@ opsys=CentOS
 nodecpu={{arc_frontend_cluster_nodecpu}}
 
 arc_frontend_queue_grid: |
- [queue/grid]
+ [queue:grid]
  comment=Grid queue
  
  benchmark="SPECFP2000 {{arc_frontend_sfp}}"
