Add tester to template

--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -23,6 +23,7 @@ map_to_pool= fgi /etc/grid-security/fgipool
 
 map_to_user = ops gridnull:gridnull
 map_to_user = fgi gridnull:gridnull
+map_to_user = tester gridnull:gridnull
 
 [lrms]
 lrms=SLURM
