Modify arc.conf for arctest user v2

--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -10,12 +10,12 @@ voms = ops * * *
 [authgroup:fgi]
 voms = fgi.csc.fi * * *
 
-[authgroup:tester]
+[authgroup:arctest]
 
 [authgroup:allusers]
 authgroup=ops
 authgroup=fgi
-authgroup=tester
+authgroup=arctest
 
 [mapping]
 map_to_pool= ops /etc/grid-security/opspool
