--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -124,7 +124,7 @@ advertisedvo=ops
 nodeaccess=outbound
 clustersupport={{adminMailAddr}}
 architecture=adotf
-opsys=CentOS
+opsys=adotf
 nodecpu={{arc_frontend_cluster_nodecpu}}
 
 {{ arc_frontend_queue_grid }}
