Remove user mapping for now

--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -22,8 +22,8 @@ map_to_pool= ops /etc/grid-security/opspool
 map_to_pool= fgi /etc/grid-security/fgipool
 map_to_pool= arctest /etc/grid-security/arctestpool
 
-map_to_user = ops gridnull:gridnull
-map_to_user = fgi gridnull:gridnull
+#map_to_user = ops gridnull:gridnull
+#map_to_user = fgi gridnull:gridnull
 
 [lrms]
 lrms=SLURM
