remove apel reporting

--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -62,10 +62,10 @@ vomsless_vo=fgi.csc.fi
 [arex/jura/archiving]
 archivedir=/var/spool/nordugrid/jura
 
-[arex/jura/apel:ngi]
-targeturl=https://mq.cro-ngi.hr:6162
-gocdb_name={{gocDBName}}
-urbatchsize=100
+#[arex/jura/apel:ngi]
+#targeturl=https://mq.cro-ngi.hr:6162
+#gocdb_name={{gocDBName}}
+#urbatchsize=100
 
 [arex/jura/sgas:csc]
 targeturl=https://pulse.fgi.csc.fi:6143/sgas
