arc.conf: #apel_messages = urs

--- a/templates/arc.conf.j2
+++ b/templates/arc.conf.j2
@@ -65,6 +65,7 @@ archivedir=/var/spool/nordugrid/jura
 #targeturl=https://mq.cro-ngi.hr:6162
 #gocdb_name={{gocDBName}}
 #urbatchsize=100
+#apel_messages = urs
 
 [arex/jura/sgas:csc]
 targeturl=https://pulse.fgi.csc.fi:6143/sgas
